--- a/dental.html
+++ b/dental.html
@@ -16,15 +16,15 @@
         </div>
         <div class="logo1">
           <img src="Images/dealth-phone.png" class="phone" />
-          <span>+1 408 000 00 00</span>
+          <span class="texx">+1 408 000 00 00</span>
         </div>
         <div class="logo1">
           <img src="Images/dealth-mail.png" class="mail" />
-          <span>sinsaulhaquekt@gmail.com</span>
+          <span class="texx">sinsaulhaquekt@gmail.com</span>
         </div>
         <div class="logo1">
           <img src="Images/dealth-adress.png" class="mail" />
-          <span>Eyüp, İstanbul 34250 Turkey</span>
+          <span class="texx">Eyüp, İstanbul 34250 Turkey</span>
         </div>
       </div>
       <div class="bar2">
